Mobile UI fixes
* Layout issues when displaying course name and extension fixed.
Affected guider, course picker and studies view causing undesired
wrapping.
* Removed dead code as the result of above fix
* Added new variable for capitalized text for mobile and desktop usage
so they fall in line better with other layout

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
@@ -160,7 +160,7 @@
 .application-list__item-header {
   align-items: flex-start;
   display: flex;   
-  flex-flow: row nowrap;   
+  flex-flow: row wrap;   
 }
 
 .application-list__item-body {
