--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/course.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/course.scss
@@ -40,8 +40,7 @@
   cursor: auto;
 }
 
-.course--open .text--list-item-title,
-.course--open .text--list-item-title-extension {
+.course--open .text--list-item-title {
   font-weight: 600;  
 }
 
