--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/text.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/text.scss
@@ -836,19 +836,16 @@ b {
 
 .text--list-item-title {
   display: inline-flex;
-  flex-basis: auto;
+  flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 1;
   padding: 1px 10px 1px 0;
+  word-wrap: break-word;
 }
 
 .text--list-item-helper-title {
   color: $color-default-helper;
   padding: 0 0 0 15px;
-}
-
-.text--list-item-title-extension {
-  padding: 0 0 0 5px;
 }
 
 .text--list-item-type-title {
@@ -857,7 +854,12 @@ b {
   flex-basis: auto;
   flex-grow: 0;
   flex-shrink: 1;
-  font-size: 0.825rem;
+  font-size: $text-capitalized-mobile-font-size;
   justify-content: flex-end;
   text-transform: uppercase;
+  
+  @include breakpoint($breakpoint-pad){
+    font-size: $text-capitalized-desktop-font-size;
+  }
+  
 }
